tests/typing/bad/testfile-bang1-1.scala
class A { def m() { var b: Boolean = ! 1 } }
object Main { def main(args: Array[String]) { } }
